hero basic structure added

--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -13,5 +13,5 @@
 </ul>
 </nav>
 <!-- button -->
-<button type="button">Buy now</button>
+<button class="btn" type="button">Buy now</button>
 </div>
