sections and container added

--- a/src/partials/advantages.html
+++ b/src/partials/advantages.html
@@ -1,16 +1,20 @@
 <!-- === ADVANTAGES === -->
-<h2>Advantages</h2>
-<ul class="list">
-    <li>
+<section class="advantages">
+  <div class="container">
+    <h2>Advantages</h2>
+    <ul class="list">
+      <li>
         <p>721</p>
         <p>Aliquam ac dui vel dui vulputate consectetur. Mauris massa.</p>
-    </li>
-    <li>
+      </li>
+      <li>
         <p>16kg</p>
         <p>Aliquam ac dui vel dui vulputate consectetur. Mauris massa.</p>
-    </li>
-    <li>
+      </li>
+      <li>
         <p>84</p>
         <p>Aliquam ac dui vel dui vulputate consectetur. Mauris massa.</p>
-    </li>
-</ul>
+      </li>
+    </ul>
+  </div>
+</section>
