--- a/src/partials/gallery.html
+++ b/src/partials/gallery.html
@@ -1,7 +1,11 @@
 <!-- === GALLERY === -->
-<h2>Gallery</h2>
-<ul class="list">
-    <li><img src="" alt=""></li>
-    <li><img src="" alt=""></li>
-    <li><img src="" alt=""></li>
-</ul>
+<section class="gallery">
+  <div class="container">
+    <h2>Gallery</h2>
+    <ul class="list">
+      <li><img src="" alt="" /></li>
+      <li><img src="" alt="" /></li>
+      <li><img src="" alt="" /></li>
+    </ul>
+  </div>
+</section>
