--- a/src/partials/reviews.html
+++ b/src/partials/reviews.html
@@ -1,25 +1,29 @@
 <!-- === REVIEWS === -->
-<h2>Customer reviews</h2>
-<ul class="list">
-    <li>
+<section class="reviews">
+  <div class="container">
+    <h2>Customer reviews</h2>
+    <ul class="list">
+      <li>
         <div class="thumb">
-            <img src="" alt="">
-            <p></p>
-            <p></p>
+          <img src="" alt="" />
+          <p></p>
+          <p></p>
         </div>
-    </li>
-    <li>
+      </li>
+      <li>
         <div class="thumb">
-            <img src="" alt="">
-            <p></p>
-            <p></p>
+          <img src="" alt="" />
+          <p></p>
+          <p></p>
         </div>
-    </li>
-    <li>
+      </li>
+      <li>
         <div class="thumb">
-            <img src="" alt="">
-            <p></p>
-            <p></p>
+          <img src="" alt="" />
+          <p></p>
+          <p></p>
         </div>
-    </li>
-</ul>
+      </li>
+    </ul>
+  </div>
+</section>
