--- a/src/partials/hero.html
+++ b/src/partials/hero.html
@@ -1,9 +1,16 @@
 <!-- === HERO === -->
-<h1>ice cream made with passion</h1>
-<button class="btn" type="button">Products</button>
-<button class="btn" type="button">How it’s made?</button>
-<img src="" alt="">
-<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et</p>
-<p>16 cafes</p>
-<p>23 food trucks</p>
-<img src="" alt="">
+<section class="hero">
+  <div class="container">
+    <h1>ice cream made with passion</h1>
+    <button class="btn" type="button">Products</button>
+    <button class="btn" type="button">How it’s made?</button>
+    <img src="" alt="" />
+    <p>
+      Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod
+      tempor incididunt ut labore et
+    </p>
+    <p>16 cafes</p>
+    <p>23 food trucks</p>
+    <img src="" alt="" />
+  </div>
+</section>
