footer scss added

--- a/src/sass/utils/_variables.scss
+++ b/src/sass/utils/_variables.scss
@@ -5,11 +5,12 @@ $mainFont: 'Montserrat', sans-serif;
 $secondaryFont: 'Seymour One', sans-serif;
 
 // Text colors
-$mainTextColor: #131313;
+$mainTextColor: #fcfcfc;
+$secondaryTextColor: #131313;
 $accentColor: #f8d24e;
 
 // Background colors
-$mainBgColor: #84a278;
+$mainBgColor: #84a178;
 $secondaryBgColor: #fcfcfc;
 
 // Border colors
