--- a/src/sass/utils/_mixins.scss
+++ b/src/sass/utils/_mixins.scss
@@ -1,7 +1,7 @@
 // Mixin for tablet styles
 
 @mixin only-tablet {
-  @media screen and (min-width: 768px) and (max-width: 1199px) {
+  @media screen and (min-width: $minTablet) and (max-width: calc($minDesktop - 1px)) {
     @content;
   }
 }
@@ -9,7 +9,7 @@
 // Mixin for desktop styles
 
 @mixin only-desktop {
-  @media screen and (min-width: 1200px) {
+  @media screen and (min-width: $minDesktop) {
     @content;
   }
 }
@@ -17,7 +17,7 @@
 // Mixin for common tablet and desktop styles
 
 @mixin tablet-and-desktop {
-  @media screen and (min-width: 768px) {
+  @media screen and (min-width: $minTablet) {
     @content;
   }
 }
