--- a/src/sass/utils/_variables.scss
+++ b/src/sass/utils/_variables.scss
@@ -4,10 +4,16 @@
 $mainFont: 'Montserrat', sans-serif;
 $secondaryFont: 'Seymour One', sans-serif;
 
-// Text colors
-$mainTextColor: #fcfcfc;
-$secondaryTextColor: #131313;
-$accentColor: #f8d24e;
+// Colors
+$mainColor: #fcfcfc;
+$secondaryColor: #131313;
+$mainAccentColor: #f8d24e;
+$secondaryAccentColor: #0a8817;
+$disabledColor: #ababab;
+$addressColor: #d6936d;
+$timeColor: #907e82;
+$rightsColor: #7a7a7a;
+$phoneContactColor: #ffffff;
 
 // Background colors
 $mainBgColor: #84a178;
