mixins for screens and pixel-ratio added

--- a/src/sass/utils/_mixins.scss
+++ b/src/sass/utils/_mixins.scss
@@ -1,3 +1,11 @@
+// Mixin for mobile styles
+
+@mixin only-mobile {
+  @media screen and (min-width: $minMobile) and (max-width: calc($minTablet - 1px)) {
+    @content;
+  }
+}
+
 // Mixin for tablet styles
 
 @mixin only-tablet {
@@ -14,10 +22,28 @@
   }
 }
 
+// Mixin for common mobile and tablet styles
+
+@mixin mobile-and-tablet {
+  @media screen and (min-width: $minMobile) and (max-width: calc($minDesktop - 1px)) {
+    @content;
+  }
+}
+
 // Mixin for common tablet and desktop styles
 
 @mixin tablet-and-desktop {
   @media screen and (min-width: $minTablet) {
+    @content;
+  }
+}
+
+// Mixin for pixel-ratio-media-queries
+
+@mixin pixel-ratio-2x {
+  @media (min-device-pixel-ratio: 2),
+    (min-resolution: 192dpi),
+    (min-resolution: 2dppx) {
     @content;
   }
 }
