--- a/src/sass/utils/_variables.scss
+++ b/src/sass/utils/_variables.scss
@@ -14,6 +14,7 @@ $addressColor: #d6936d;
 $timeColor: #907e82;
 $rightsColor: #7a7a7a;
 $phoneContactColor: #ffffff;
+$buttonTextColor: #000000;
 
 // Background colors
 $mainBgColor: #84a178;
