--- a/src/partials/hero.html
+++ b/src/partials/hero.html
@@ -3,7 +3,7 @@
   <div class="container">
     <h1>ice cream made with passion</h1>
     <ul class="list">
-      <li><button class="btn" type="button">Products</button></li>
+      <li><button class="btn btn-products" type="button">Products</button></li>
       <li><button class="btn" type="button">How it’s made?</button></li>
     </ul>
     <img
