--- a/src/sass/utils/_placeholders.scss
+++ b/src/sass/utils/_placeholders.scss
@@ -4,6 +4,9 @@
   font-weight: 600;
   font-size: 14px;
   line-height: calc(18 / 14);
+  text-align: center;
+
+  border-radius: 10px;
 
   color: $buttonTextColor;
 
