--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -9,5 +9,10 @@
       <li><a href="" class="link">Contact</a></li>
     </ul>
   </nav>
-  <button class="btn">Buy now</button>
+  <button class="btn btn-buy-now">
+    Buy now
+    <svg class="btn-buy-now__icon" width="12" height="12">
+      <use href="./images/icons/svg-icons.svg#icon-right-arrow"></use>
+    </svg>
+  </button>
 </div>
