--- a/src/partials/hero.html
+++ b/src/partials/hero.html
@@ -4,7 +4,11 @@
     <h1>ice cream made with passion</h1>
     <ul class="list">
       <li><button class="btn btn-products" type="button">Products</button></li>
-      <li><button class="btn" type="button">How it’s made?</button></li>
+      <li>
+        <button class="btn btn-how-its-made" type="button">
+          How it’s made?
+        </button>
+      </li>
     </ul>
     <img
       src="./images/plate/png/plate-ice-cream-tablet-152.png"
