--- a/src/partials/about.html
+++ b/src/partials/about.html
@@ -19,7 +19,12 @@
         coffee and 23 milkshakes.
       </p>
       <p>This is enough to choose ice cream and coffee for any mood!</p>
-      <button class="btn" type="button">Read more</button>
+      <button class="btn btn-read-more" type="button">
+        Read more
+        <svg class="btn-read-more__icon" width="12" height="12">
+          <use href="./images/icons/svg-icons.svg#icon-right-arrow"></use>
+        </svg>
+      </button>
     </div>
   </div>
 </section>
