--- a/src/partials/contacts.html
+++ b/src/partials/contacts.html
@@ -98,8 +98,22 @@
       </li>
     </ul>
     <ul>
-      <li><button class="btn" type="button">Our Locations</button></li>
-      <li><button class="btn" type="button">Franchise</button></li>
+      <li>
+        <button class="btn btn-locations" type="button">
+          Our Locations
+          <svg class="btn-locations__icon" width="12" height="12">
+            <use href="./images/icons/svg-icons.svg#icon-right-arrow"></use>
+          </svg>
+        </button>
+      </li>
+      <li>
+        <button class="btn btn-franchise" type="button">
+          Franchise
+          <svg class="btn-locations__icon" width="12" height="12">
+            <use href="./images/icons/svg-icons.svg#icon-right-arrow"></use>
+          </svg>
+        </button>
+      </li>
     </ul>
   </div>
 </section>
