--- a/src/sass/index.css
+++ b/src/sass/index.css
@@ -1,4 +1,84 @@
-@import '~node_modules/modern-normalize/modern-normalize.css'; /* == BASIC PAGE STYLES == */
+@import '~node_modules/modern-normalize/modern-normalize.css';
+.btn-read-more,
+.btn-locations,
+.btn-buy-now, .btn-how-its-made, .btn-franchise, .btn-products {
+  font-weight: 600;
+  font-size: 14px;
+  line-height: 1.2857142857;
+  border-radius: 10px;
+  color: #000000;
+}
+.btn-read-more:focus,
+.btn-locations:focus,
+.btn-buy-now:focus, .btn-how-its-made:focus, .btn-franchise:focus, .btn-products:focus {
+  color: #fcfcfc;
+}
+
+.btn-how-its-made, .btn-franchise, .btn-products {
+  background-color: transparent;
+  border: 2px solid #f8d24e;
+}
+.btn-how-its-made:hover, .btn-franchise:hover, .btn-products:hover, .btn-how-its-made:focus, .btn-franchise:focus, .btn-products:focus {
+  border: 2px solid #0a8817;
+}
+
+.btn-read-more,
+.btn-locations,
+.btn-buy-now {
+  background-color: #f8d24e;
+  border: 2px solid #f8d24e;
+}
+.btn-read-more:hover,
+.btn-locations:hover,
+.btn-buy-now:hover, .btn-read-more:focus,
+.btn-locations:focus,
+.btn-buy-now:focus {
+  background-color: #0a8817;
+  border: 2px solid #0a8817;
+}
+
+/* == GLOBAL STYLES RESET == */
+/* headings and paragraphs */
+p,
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
+  margin-top: 0;
+  margin-bottom: 0;
+}
+
+/* ul */
+.list {
+  list-style: none;
+  margin-top: 0;
+  margin-bottom: 0;
+  padding-left: 0;
+}
+
+/* button */
+.btn {
+  padding: 0;
+  cursor: pointer;
+}
+
+/* img */
+.image {
+  display: block;
+  max-width: 100%;
+  height: auto;
+}
+
+/* a */
+.link {
+  display: block;
+  text-decoration: none;
+  color: inherit;
+}
+
+/* == BASIC PAGE STYLES == */
 body {
   font-family: "Montserrat", sans-serif;
   color: #fcfcfc;
@@ -31,6 +111,89 @@ footer {
   .container {
     width: 1200px;
   }
+}
+
+/* === BUTTONS === */
+.btn-products {
+  width: 134px;
+  height: 42px;
+}
+@media screen and (max-width: 767px) {
+  .btn-products {
+    width: 108px;
+    height: 38px;
+    font-size: 12px;
+    line-height: 1.25;
+    border-radius: 8px;
+  }
+}
+
+.btn-read-more,
+.btn-locations,
+.btn-buy-now,
+.btn-franchise {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 42px;
+}
+.btn-read-more__icon,
+.btn-locations__icon,
+.btn-buy-now__icon,
+.btn-franchise__icon {
+  fill: inherit;
+}
+.btn-read-more:focus .btn-read-more__icon,
+.btn-read-more:focus .btn-locations__icon,
+.btn-read-more:focus .btn-buy-now__icon,
+.btn-read-more:focus .btn-franchise__icon,
+.btn-locations:focus .btn-read-more__icon,
+.btn-locations:focus .btn-locations__icon,
+.btn-locations:focus .btn-buy-now__icon,
+.btn-locations:focus .btn-franchise__icon,
+.btn-buy-now:focus .btn-read-more__icon,
+.btn-buy-now:focus .btn-locations__icon,
+.btn-buy-now:focus .btn-buy-now__icon,
+.btn-buy-now:focus .btn-franchise__icon,
+.btn-franchise:focus .btn-read-more__icon,
+.btn-franchise:focus .btn-locations__icon,
+.btn-franchise:focus .btn-buy-now__icon,
+.btn-franchise:focus .btn-franchise__icon {
+  fill: #fcfcfc;
+}
+
+.btn-read-more {
+  width: 164px;
+}
+
+.btn-locations,
+.btn-franchise {
+  width: 196px;
+}
+
+.btn-buy-now {
+  width: 152px;
+}
+
+.btn-how-its-made {
+  width: 154px;
+  height: 40px;
+  line-height: 1.2142857143;
+  text-decoration: underline;
+  border: 2px solid transparent;
+  color: #f8d24e;
+}
+@media screen and (min-width: 480px) and (max-width: 1199px) {
+  .btn-how-its-made {
+    font-size: 12px;
+    line-height: 1.25;
+  }
+}
+.btn-how-its-made:hover, .btn-how-its-made:focus {
+  border: 2px solid transparent;
+}
+.btn-how-its-made:hover {
+  color: #0a8817;
 }
 
 /* === FOOTER ==== */
@@ -200,7 +363,7 @@ footer {
   font-weight: 700;
   font-size: 12px;
   line-height: 1.8333333333;
-  color: #fcfcfc;
+  color: #ffffff;
   transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 @media screen and (min-width: 768px) and (max-width: 1199px) {
