--- a/src/sass/utils/_placeholders.scss
+++ b/src/sass/utils/_placeholders.scss
@@ -1,10 +1,9 @@
-// Text values for buttons
+// Text for buttons
 
 %btn-text {
   font-weight: 600;
   font-size: 14px;
   line-height: calc(18 / 14);
-  text-align: center;
 
   border-radius: 10px;
 
@@ -36,9 +35,11 @@
   @extend %btn-text;
 
   background-color: $mainAccentColor;
+  @include button-border($mainAccentColor);
 
   &:hover,
   &:focus {
     background-color: $secondaryAccentColor;
+    @include button-border($secondaryAccentColor);
   }
 }
