reset list of contacts

--- a/src/partials/contacts.html
+++ b/src/partials/contacts.html
@@ -97,7 +97,7 @@
         </div>
       </li>
     </ul>
-    <ul>
+    <ul class="list">
       <li>
         <button class="btn btn-locations" type="button">
           Our Locations
