--- a/src/sass/base/_container.scss
+++ b/src/sass/base/_container.scss
@@ -1,6 +1,5 @@
 .container {
-  padding-right: 16px;
-  padding-left: 16px;
+  padding: 0 20px;
   margin-right: auto;
   margin-left: auto;
 
@@ -11,11 +10,13 @@
 
   // tablet screen
   @media screen and (min-width: 768px) {
+    padding: 0 32px;
     width: 768px;
   }
 
   // desktop screen
   @media screen and (min-width: 1200px) {
+    padding: 0 16px;
     width: 1200px;
   }
 }
