--- a/src/partials/hero.html
+++ b/src/partials/hero.html
@@ -1,7 +1,9 @@
 <!-- HERO -->
 <section class="hero">
-  <div class="container">
-    <h1>ice cream made with passion</h1>
+  <div class="container hero__container">
+    <h1 class="hero__page-title">
+      ice cream made with <span class="hero__page-title">passion</span>
+    </h1>
     <ul class="list">
       <li><button class="btn btn-products" type="button">Products</button></li>
       <li>
