--- a/src/sass/layout/_footer.scss
+++ b/src/sass/layout/_footer.scss
@@ -131,7 +131,7 @@
 
   &__phone-wrap {
     display: flex;
-    justify-content: end;
+    justify-content: flex-end;
     align-items: center;
   }
 
