hero for mobile added

--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -5,10 +5,9 @@
     <!-- Logo -->
     <a href="" class="link header__logo">
       <img
-        src="./images/logo/logo-60-65.png"
+        class="header__logo-img"
+        src="./images/logo/logo-mobile-40-37.png"
         alt="logo"
-        width="60"
-        height="65"
       />
     </a>
     <!-- Menu -->
