--- a/src/sass/utils/_placeholders.scss
+++ b/src/sass/utils/_placeholders.scss
@@ -43,3 +43,12 @@
     @include button-border($secondaryAccentColor);
   }
 }
+
+// Buttons with transparent background and without border
+
+%btn-transparent-bg-no-border {
+  @extend %btn-text;
+
+  background-color: transparent;
+  border: none;
+}
