--- a/src/sass/layout/_header.scss
+++ b/src/sass/layout/_header.scss
@@ -19,7 +19,12 @@
   }
 
   &__logo {
-    // margin-right: 308px;
+    height: 37px;
+  }
+
+  &__logo-img {
+    width: 40px;
+    height: 100%;
   }
 
   &__menu {
