--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -6,8 +6,16 @@
     <a href="" class="link header__logo">
       <img
         class="header__logo-img"
+        srcset="
+          ./images/logo/logo-mobile-40-37.png  40w,
+          ./images/logo/logo-tablet-48-44.png  48w,
+          ./images/logo/logo-desktop-60-65.png 60w
+        "
+        sizes="(min-width: 1200px) 60px, (min-width: 768px) 48px, (min-width: 480px) 40px, 100vw"
         src="./images/logo/logo-mobile-40-37.png"
         alt="logo"
+        width="40"
+        height="37"
       />
     </a>
     <!-- Menu -->
