--- a/src/sass/layout/_header.scss
+++ b/src/sass/layout/_header.scss
@@ -19,11 +19,22 @@
   }
 
   &__logo {
+    width: 40px;
     height: 37px;
+
+    @include only-tablet {
+      width: 48px;
+      height: 44px;
+    }
+
+    @include only-desktop {
+      width: 60px;
+      height: 65px;
+    }
   }
 
   &__logo-img {
-    width: 40px;
+    width: 100%;
     height: 100%;
   }
 
