paddings for menu links added

--- a/src/sass/layout/_header.scss
+++ b/src/sass/layout/_header.scss
@@ -71,6 +71,11 @@
     &:focus {
       color: $mainAccentColor;
     }
+
+    @include only-desktop {
+      padding-top: 20px;
+      padding-bottom: 20px;
+    }
   }
 
   &__button-wrap {
