id for main nav added

--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -21,16 +21,16 @@
     <!-- Menu -->
     <ul class="list header__menu">
       <li class="header__menu-item">
-        <a href="" class="link header__menu-link">Home</a>
+        <a href="index.html" class="link header__menu-link">Home</a>
       </li>
       <li class="header__menu-item">
-        <a href="" class="link header__menu-link">How it’s made?</a>
+        <a href="#about" class="link header__menu-link">How it’s made?</a>
       </li>
       <li class="header__menu-item">
-        <a href="" class="link header__menu-link">Our products</a>
+        <a href="#products" class="link header__menu-link">Our products</a>
       </li>
       <li class="header__menu-item">
-        <a href="" class="link header__menu-link">Contact</a>
+        <a href="#contacts" class="link header__menu-link">Contact</a>
       </li>
     </ul>
   </nav>
