--- a/src/partials/products.html
+++ b/src/partials/products.html
@@ -1,5 +1,5 @@
 <!-- PRODUCTS -->
-<section class="products">
+<section class="products" id="products">
   <div class="container">
     <p>100% natural</p>
     <h2>products</h2>
