--- a/src/partials/about.html
+++ b/src/partials/about.html
@@ -1,5 +1,5 @@
 <!-- ABOUT -->
-<section class="about">
+<section class="about" id="about">
   <div class="container">
     <p>tradition and love</p>
     <h2>how it’s made?</h2>
