--- a/src/partials/contacts.html
+++ b/src/partials/contacts.html
@@ -1,5 +1,5 @@
 <!-- CONTACTS -->
-<section class="contacts">
+<section class="contacts" id="contacts">
   <div class="container">
     <h2>Contacts</h2>
     <ul class="list">
